#cargo-features = ["codegen-backend"]


#[target.x86_64-unknown-linux-gnu] 

[package]
name = "implicit_playground"
version = "0.1.0"
edition = "2021"
#codegen-backend = "cranelift"

[lib]
crate-type = ["cdylib", "rlib"]

#[profile.dev]
#opt-level = 3

#rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=/usr/bin/mold"]
#rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
#linker = "clang" 

#[build]
#rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
#linker = "clang" 
#incremental = true
#rustflags = ["-C", "link-arg=-fuse-ld=lld"]
#rustflags = ["-C", "link-arg=-fuse-ld=mold"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile]
#[target.x86_64-unknown-linux-gnu] 
#rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
#linker = "clang" 
#incremental = true


[dependencies]
cfg-if = "1.0.0" # conditional compilation
winit = "0.28.3" # manage window
env_logger = "0.10.0" # log wgpu errors
log = "0.4.17" # log?
wgpu = "0.16.0" # gpu stuff
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
cgmath = "0.18.0"
gilrs = "0.10.2"
itertools = "0.10.5"
wasm-timer = "0.2.5"
#glm = "0.2.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7" # panic to javascript console
console_log = "1.0.0" # log to javascript console
wgpu = { version = "0.16.0", features = [
    "webgl" # support browsers without WebGPU API (TODO: attempt remove this)
]}
wasm-bindgen = "0.2.84" # generate interop between wasm and rust
wasm-bindgen-futures = "0.4.34"  
web-sys = { version = "0.3.61", features = [ # javascript methods in rust
    "Document", 
    "Window", 
    "Element",
]}



